# learn-cpp-game-engine-book

./: .clang-tidy  CMakeLists.txt  README.md
depends/include/glad/: glad.h
include/: shader.hpp
src/: glad.c  main.cpp  shader.cpp
